# winny

./: .env.example  .firebaserc  .gitignore  .vercelignore  BENCHMARK_pinocchio_vs_anchor.md  README.md  VIDEO_VOICEOVER_2MIN_EN_STRUCTURED.json  addresses.json  addresses.mainnet.json  database.rules.json  degen-pool-manifest.json  index.html  package-lock.json  package.json  stitch-dashboard.html  tailwind.config.js  tsconfig.json  vercel.json  vite.config.ts  vitest.config.ts
jackpot_anchor_v4/programs/jackpot/: Cargo.toml
jackpot_pinocchio_poc/: Cargo.toml  build.rs
jackpot_pinocchio_poc/benches/: compute_units.rs
jackpot_pinocchio_poc/fixtures/token_stub_program/: Cargo.toml
jackpot_pinocchio_poc/fixtures/vrf_stub_program/: Cargo.toml
jackpot_pinocchio_poc/scripts/: local_cancelled_round_smoke.ts  local_classic_round_smoke.ts  local_degen_fallback_smoke.ts  local_deploy_smoke.ts  local_multi_user_smoke.ts  run_cu_bench.sh  run_cu_benchmark.sh  run_devnet_e2e.sh  run_local_cancelled_round_smoke.sh  run_local_classic_round_smoke.sh  run_local_degen_fallback_smoke.sh  run_local_deploy_smoke.sh  run_local_multi_user_smoke.sh  run_mollusk_smoke.sh
jackpot_pinocchio_poc/src/: anchor_compat.rs  degen_pool_compat.rs  errors.rs  instruction_layouts.rs  legacy_layouts.rs  lib.rs
jackpot_pinocchio_poc/src/handlers/: admin_force_cancel.rs  auto_claim.rs  begin_degen_execution.rs  cancel_round.rs  claim.rs  claim_degen.rs  claim_degen_fallback.rs  claim_refund.rs  close_participant.rs  close_round.rs  degen_common.rs  degen_vrf_callback.rs  (+13 more)
jackpot_pinocchio_poc/tests/: mollusk_smoke.rs
(+283 files in other folders)
