[workspace]

[package]
name = "jackpot-pinocchio-poc"
version = "0.1.0"
edition = "2021"

[lib]
name = "jackpot_pinocchio_poc"
crate-type = ["cdylib", "lib"]

[features]
default = []
bpf-entrypoint = []

[dependencies]
pinocchio = { version = "0.10", features = ["cpi"] }
pinocchio-associated-token-account = "0.3.0"
pinocchio-system = "0.5.0"
pinocchio-token = "0.5.0"
sha2 = "0.10"
solana-address = { version = "2.2.0", features = ["curve25519"] }

[dev-dependencies]
mollusk-svm = "0.10.3"
mollusk-svm-bencher = "0.10.3"
sha2 = "0.10"
solana-account = "3.2.0"
solana-instruction = "3.2.0"
solana-pubkey = "4.1.0"

[build-dependencies]
bs58 = "0.5"
sha2 = "0.10"

[[bench]]
name = "compute_units"
harness = false

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
opt-level = 3
